APIs/googleapis.com/adexchangebuyer/v1.3/python-client/README.md
# openapi-client
Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1.3
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/adexchangebuyer/v1.3
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/adexchangebuyer/v1.3"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AccountsApi(api_client)
    id = 56 # int | The account id
    alt = 'alt_example' # str | Data format for the response. (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)

    try:
        api_response = api_instance.adexchangebuyer_accounts_get(id, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip)
        print("The response of AccountsApi->adexchangebuyer_accounts_get:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AccountsApi->adexchangebuyer_accounts_get: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/adexchangebuyer/v1.3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**adexchangebuyer_accounts_get**](docs/AccountsApi.md#adexchangebuyer_accounts_get) | **GET** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyer_accounts_list**](docs/AccountsApi.md#adexchangebuyer_accounts_list) | **GET** /accounts | 
*AccountsApi* | [**adexchangebuyer_accounts_patch**](docs/AccountsApi.md#adexchangebuyer_accounts_patch) | **PATCH** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyer_accounts_update**](docs/AccountsApi.md#adexchangebuyer_accounts_update) | **PUT** /accounts/{id} | 
*BillingInfoApi* | [**adexchangebuyer_billing_info_get**](docs/BillingInfoApi.md#adexchangebuyer_billing_info_get) | **GET** /billinginfo/{accountId} | 
*BillingInfoApi* | [**adexchangebuyer_billing_info_list**](docs/BillingInfoApi.md#adexchangebuyer_billing_info_list) | **GET** /billinginfo | 
*BudgetApi* | [**adexchangebuyer_budget_get**](docs/BudgetApi.md#adexchangebuyer_budget_get) | **GET** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyer_budget_patch**](docs/BudgetApi.md#adexchangebuyer_budget_patch) | **PATCH** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyer_budget_update**](docs/BudgetApi.md#adexchangebuyer_budget_update) | **PUT** /billinginfo/{accountId}/{billingId} | 
*CreativesApi* | [**adexchangebuyer_creatives_get**](docs/CreativesApi.md#adexchangebuyer_creatives_get) | **GET** /creatives/{accountId}/{buyerCreativeId} | 
*CreativesApi* | [**adexchangebuyer_creatives_insert**](docs/CreativesApi.md#adexchangebuyer_creatives_insert) | **POST** /creatives | 
*CreativesApi* | [**adexchangebuyer_creatives_list**](docs/CreativesApi.md#adexchangebuyer_creatives_list) | **GET** /creatives | 
*DirectDealsApi* | [**adexchangebuyer_direct_deals_get**](docs/DirectDealsApi.md#adexchangebuyer_direct_deals_get) | **GET** /directdeals/{id} | 
*DirectDealsApi* | [**adexchangebuyer_direct_deals_list**](docs/DirectDealsApi.md#adexchangebuyer_direct_deals_list) | **GET** /directdeals | 
*PerformanceReportApi* | [**adexchangebuyer_performance_report_list**](docs/PerformanceReportApi.md#adexchangebuyer_performance_report_list) | **GET** /performancereport | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_delete**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_delete) | **DELETE** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_get**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_get) | **GET** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_insert**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_insert) | **POST** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_list**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_list) | **GET** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_patch**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_patch) | **PATCH** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_update**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_update) | **PUT** /pretargetingconfigs/{accountId}/{configId} | 


## Documentation For Models

 - [Account](docs/Account.md)
 - [AccountBidderLocationInner](docs/AccountBidderLocationInner.md)
 - [AccountsList](docs/AccountsList.md)
 - [BillingInfo](docs/BillingInfo.md)
 - [BillingInfoList](docs/BillingInfoList.md)
 - [Budget](docs/Budget.md)
 - [Creative](docs/Creative.md)
 - [CreativeAdTechnologyProviders](docs/CreativeAdTechnologyProviders.md)
 - [CreativeCorrectionsInner](docs/CreativeCorrectionsInner.md)
 - [CreativeDisapprovalReasonsInner](docs/CreativeDisapprovalReasonsInner.md)
 - [CreativeFilteringReasons](docs/CreativeFilteringReasons.md)
 - [CreativeFilteringReasonsReasonsInner](docs/CreativeFilteringReasonsReasonsInner.md)
 - [CreativeNativeAd](docs/CreativeNativeAd.md)
 - [CreativeNativeAdAppIcon](docs/CreativeNativeAdAppIcon.md)
 - [CreativeNativeAdImage](docs/CreativeNativeAdImage.md)
 - [CreativeNativeAdLogo](docs/CreativeNativeAdLogo.md)
 - [CreativesList](docs/CreativesList.md)
 - [DirectDeal](docs/DirectDeal.md)
 - [DirectDealsList](docs/DirectDealsList.md)
 - [PerformanceReport](docs/PerformanceReport.md)
 - [PerformanceReportList](docs/PerformanceReportList.md)
 - [PretargetingConfig](docs/PretargetingConfig.md)
 - [PretargetingConfigDimensionsInner](docs/PretargetingConfigDimensionsInner.md)
 - [PretargetingConfigExcludedPlacementsInner](docs/PretargetingConfigExcludedPlacementsInner.md)
 - [PretargetingConfigList](docs/PretargetingConfigList.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/adexchange.buyer**: Manage your Ad Exchange buyer account configuration

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/adexchange.buyer**: Manage your Ad Exchange buyer account configuration


## Author




