APIs/googleapis.com/adexchangebuyer/v1.4/python-client/README.md
# openapi-client
Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1.4
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://www.googleapis.com/adexchangebuyer/v1.4
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://www.googleapis.com/adexchangebuyer/v1.4"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.AccountsApi(api_client)
    id = 56 # int | The account id
    alt = 'alt_example' # str | Data format for the response. (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | An opaque string that represents a user for quota purposes. Must not exceed 40 characters. (optional)
    user_ip = 'user_ip_example' # str | Deprecated. Please use quotaUser instead. (optional)

    try:
        api_response = api_instance.adexchangebuyer_accounts_get(id, alt=alt, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, user_ip=user_ip)
        print("The response of AccountsApi->adexchangebuyer_accounts_get:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling AccountsApi->adexchangebuyer_accounts_get: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/adexchangebuyer/v1.4*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AccountsApi* | [**adexchangebuyer_accounts_get**](docs/AccountsApi.md#adexchangebuyer_accounts_get) | **GET** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyer_accounts_list**](docs/AccountsApi.md#adexchangebuyer_accounts_list) | **GET** /accounts | 
*AccountsApi* | [**adexchangebuyer_accounts_patch**](docs/AccountsApi.md#adexchangebuyer_accounts_patch) | **PATCH** /accounts/{id} | 
*AccountsApi* | [**adexchangebuyer_accounts_update**](docs/AccountsApi.md#adexchangebuyer_accounts_update) | **PUT** /accounts/{id} | 
*BillingInfoApi* | [**adexchangebuyer_billing_info_get**](docs/BillingInfoApi.md#adexchangebuyer_billing_info_get) | **GET** /billinginfo/{accountId} | 
*BillingInfoApi* | [**adexchangebuyer_billing_info_list**](docs/BillingInfoApi.md#adexchangebuyer_billing_info_list) | **GET** /billinginfo | 
*BudgetApi* | [**adexchangebuyer_budget_get**](docs/BudgetApi.md#adexchangebuyer_budget_get) | **GET** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyer_budget_patch**](docs/BudgetApi.md#adexchangebuyer_budget_patch) | **PATCH** /billinginfo/{accountId}/{billingId} | 
*BudgetApi* | [**adexchangebuyer_budget_update**](docs/BudgetApi.md#adexchangebuyer_budget_update) | **PUT** /billinginfo/{accountId}/{billingId} | 
*CreativesApi* | [**adexchangebuyer_creatives_add_deal**](docs/CreativesApi.md#adexchangebuyer_creatives_add_deal) | **POST** /creatives/{accountId}/{buyerCreativeId}/addDeal/{dealId} | 
*CreativesApi* | [**adexchangebuyer_creatives_get**](docs/CreativesApi.md#adexchangebuyer_creatives_get) | **GET** /creatives/{accountId}/{buyerCreativeId} | 
*CreativesApi* | [**adexchangebuyer_creatives_insert**](docs/CreativesApi.md#adexchangebuyer_creatives_insert) | **POST** /creatives | 
*CreativesApi* | [**adexchangebuyer_creatives_list**](docs/CreativesApi.md#adexchangebuyer_creatives_list) | **GET** /creatives | 
*CreativesApi* | [**adexchangebuyer_creatives_list_deals**](docs/CreativesApi.md#adexchangebuyer_creatives_list_deals) | **GET** /creatives/{accountId}/{buyerCreativeId}/listDeals | 
*CreativesApi* | [**adexchangebuyer_creatives_remove_deal**](docs/CreativesApi.md#adexchangebuyer_creatives_remove_deal) | **POST** /creatives/{accountId}/{buyerCreativeId}/removeDeal/{dealId} | 
*MarketplacedealsApi* | [**adexchangebuyer_marketplacedeals_delete**](docs/MarketplacedealsApi.md#adexchangebuyer_marketplacedeals_delete) | **POST** /proposals/{proposalId}/deals/delete | 
*MarketplacedealsApi* | [**adexchangebuyer_marketplacedeals_insert**](docs/MarketplacedealsApi.md#adexchangebuyer_marketplacedeals_insert) | **POST** /proposals/{proposalId}/deals/insert | 
*MarketplacedealsApi* | [**adexchangebuyer_marketplacedeals_list**](docs/MarketplacedealsApi.md#adexchangebuyer_marketplacedeals_list) | **GET** /proposals/{proposalId}/deals | 
*MarketplacedealsApi* | [**adexchangebuyer_marketplacedeals_update**](docs/MarketplacedealsApi.md#adexchangebuyer_marketplacedeals_update) | **POST** /proposals/{proposalId}/deals/update | 
*MarketplacenotesApi* | [**adexchangebuyer_marketplacenotes_insert**](docs/MarketplacenotesApi.md#adexchangebuyer_marketplacenotes_insert) | **POST** /proposals/{proposalId}/notes/insert | 
*MarketplacenotesApi* | [**adexchangebuyer_marketplacenotes_list**](docs/MarketplacenotesApi.md#adexchangebuyer_marketplacenotes_list) | **GET** /proposals/{proposalId}/notes | 
*MarketplaceprivateauctionApi* | [**adexchangebuyer_marketplaceprivateauction_updateproposal**](docs/MarketplaceprivateauctionApi.md#adexchangebuyer_marketplaceprivateauction_updateproposal) | **POST** /privateauction/{privateAuctionId}/updateproposal | 
*PerformanceReportApi* | [**adexchangebuyer_performance_report_list**](docs/PerformanceReportApi.md#adexchangebuyer_performance_report_list) | **GET** /performancereport | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_delete**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_delete) | **DELETE** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_get**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_get) | **GET** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_insert**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_insert) | **POST** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_list**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_list) | **GET** /pretargetingconfigs/{accountId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_patch**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_patch) | **PATCH** /pretargetingconfigs/{accountId}/{configId} | 
*PretargetingConfigApi* | [**adexchangebuyer_pretargeting_config_update**](docs/PretargetingConfigApi.md#adexchangebuyer_pretargeting_config_update) | **PUT** /pretargetingconfigs/{accountId}/{configId} | 
*ProductsApi* | [**adexchangebuyer_products_get**](docs/ProductsApi.md#adexchangebuyer_products_get) | **GET** /products/{productId} | 
*ProductsApi* | [**adexchangebuyer_products_search**](docs/ProductsApi.md#adexchangebuyer_products_search) | **GET** /products/search | 
*ProposalsApi* | [**adexchangebuyer_proposals_get**](docs/ProposalsApi.md#adexchangebuyer_proposals_get) | **GET** /proposals/{proposalId} | 
*ProposalsApi* | [**adexchangebuyer_proposals_insert**](docs/ProposalsApi.md#adexchangebuyer_proposals_insert) | **POST** /proposals/insert | 
*ProposalsApi* | [**adexchangebuyer_proposals_patch**](docs/ProposalsApi.md#adexchangebuyer_proposals_patch) | **PATCH** /proposals/{proposalId}/{revisionNumber}/{updateAction} | 
*ProposalsApi* | [**adexchangebuyer_proposals_search**](docs/ProposalsApi.md#adexchangebuyer_proposals_search) | **GET** /proposals/search | 
*ProposalsApi* | [**adexchangebuyer_proposals_setupcomplete**](docs/ProposalsApi.md#adexchangebuyer_proposals_setupcomplete) | **POST** /proposals/{proposalId}/setupcomplete | 
*ProposalsApi* | [**adexchangebuyer_proposals_update**](docs/ProposalsApi.md#adexchangebuyer_proposals_update) | **PUT** /proposals/{proposalId}/{revisionNumber}/{updateAction} | 
*PubprofilesApi* | [**adexchangebuyer_pubprofiles_list**](docs/PubprofilesApi.md#adexchangebuyer_pubprofiles_list) | **GET** /publisher/{accountId}/profiles | 


## Documentation For Models

 - [Account](docs/Account.md)
 - [AccountBidderLocationInner](docs/AccountBidderLocationInner.md)
 - [AccountsList](docs/AccountsList.md)
 - [AddOrderDealsRequest](docs/AddOrderDealsRequest.md)
 - [AddOrderDealsResponse](docs/AddOrderDealsResponse.md)
 - [AddOrderNotesRequest](docs/AddOrderNotesRequest.md)
 - [AddOrderNotesResponse](docs/AddOrderNotesResponse.md)
 - [BillingInfo](docs/BillingInfo.md)
 - [BillingInfoList](docs/BillingInfoList.md)
 - [Budget](docs/Budget.md)
 - [Buyer](docs/Buyer.md)
 - [ContactInformation](docs/ContactInformation.md)
 - [CreateOrdersRequest](docs/CreateOrdersRequest.md)
 - [CreateOrdersResponse](docs/CreateOrdersResponse.md)
 - [Creative](docs/Creative.md)
 - [CreativeAdTechnologyProviders](docs/CreativeAdTechnologyProviders.md)
 - [CreativeCorrectionsInner](docs/CreativeCorrectionsInner.md)
 - [CreativeCorrectionsInnerContextsInner](docs/CreativeCorrectionsInnerContextsInner.md)
 - [CreativeDealIds](docs/CreativeDealIds.md)
 - [CreativeDealIdsDealStatusesInner](docs/CreativeDealIdsDealStatusesInner.md)
 - [CreativeFilteringReasons](docs/CreativeFilteringReasons.md)
 - [CreativeFilteringReasonsReasonsInner](docs/CreativeFilteringReasonsReasonsInner.md)
 - [CreativeNativeAd](docs/CreativeNativeAd.md)
 - [CreativeNativeAdAppIcon](docs/CreativeNativeAdAppIcon.md)
 - [CreativeNativeAdImage](docs/CreativeNativeAdImage.md)
 - [CreativeNativeAdLogo](docs/CreativeNativeAdLogo.md)
 - [CreativeServingRestrictionsInner](docs/CreativeServingRestrictionsInner.md)
 - [CreativeServingRestrictionsInnerContextsInner](docs/CreativeServingRestrictionsInnerContextsInner.md)
 - [CreativeServingRestrictionsInnerDisapprovalReasonsInner](docs/CreativeServingRestrictionsInnerDisapprovalReasonsInner.md)
 - [CreativesList](docs/CreativesList.md)
 - [DealServingMetadata](docs/DealServingMetadata.md)
 - [DealServingMetadataDealPauseStatus](docs/DealServingMetadataDealPauseStatus.md)
 - [DealTerms](docs/DealTerms.md)
 - [DealTermsGuaranteedFixedPriceTerms](docs/DealTermsGuaranteedFixedPriceTerms.md)
 - [DealTermsGuaranteedFixedPriceTermsBillingInfo](docs/DealTermsGuaranteedFixedPriceTermsBillingInfo.md)
 - [DealTermsNonGuaranteedAuctionTerms](docs/DealTermsNonGuaranteedAuctionTerms.md)
 - [DealTermsNonGuaranteedFixedPriceTerms](docs/DealTermsNonGuaranteedFixedPriceTerms.md)
 - [DealTermsRubiconNonGuaranteedTerms](docs/DealTermsRubiconNonGuaranteedTerms.md)
 - [DeleteOrderDealsRequest](docs/DeleteOrderDealsRequest.md)
 - [DeleteOrderDealsResponse](docs/DeleteOrderDealsResponse.md)
 - [DeliveryControl](docs/DeliveryControl.md)
 - [DeliveryControlFrequencyCap](docs/DeliveryControlFrequencyCap.md)
 - [Dimension](docs/Dimension.md)
 - [DimensionDimensionValue](docs/DimensionDimensionValue.md)
 - [EditAllOrderDealsRequest](docs/EditAllOrderDealsRequest.md)
 - [EditAllOrderDealsResponse](docs/EditAllOrderDealsResponse.md)
 - [GetOffersResponse](docs/GetOffersResponse.md)
 - [GetOrderDealsResponse](docs/GetOrderDealsResponse.md)
 - [GetOrderNotesResponse](docs/GetOrderNotesResponse.md)
 - [GetOrdersResponse](docs/GetOrdersResponse.md)
 - [GetPublisherProfilesByAccountIdResponse](docs/GetPublisherProfilesByAccountIdResponse.md)
 - [MarketplaceDeal](docs/MarketplaceDeal.md)
 - [MarketplaceDealParty](docs/MarketplaceDealParty.md)
 - [MarketplaceLabel](docs/MarketplaceLabel.md)
 - [MarketplaceNote](docs/MarketplaceNote.md)
 - [MobileApplication](docs/MobileApplication.md)
 - [PerformanceReport](docs/PerformanceReport.md)
 - [PerformanceReportList](docs/PerformanceReportList.md)
 - [PretargetingConfig](docs/PretargetingConfig.md)
 - [PretargetingConfigDimensionsInner](docs/PretargetingConfigDimensionsInner.md)
 - [PretargetingConfigExcludedPlacementsInner](docs/PretargetingConfigExcludedPlacementsInner.md)
 - [PretargetingConfigList](docs/PretargetingConfigList.md)
 - [PretargetingConfigVideoPlayerSizesInner](docs/PretargetingConfigVideoPlayerSizesInner.md)
 - [Price](docs/Price.md)
 - [PricePerBuyer](docs/PricePerBuyer.md)
 - [PrivateData](docs/PrivateData.md)
 - [Product](docs/Product.md)
 - [Proposal](docs/Proposal.md)
 - [PublisherProfileApiProto](docs/PublisherProfileApiProto.md)
 - [PublisherProvidedForecast](docs/PublisherProvidedForecast.md)
 - [Seller](docs/Seller.md)
 - [SharedTargeting](docs/SharedTargeting.md)
 - [TargetingValue](docs/TargetingValue.md)
 - [TargetingValueCreativeSize](docs/TargetingValueCreativeSize.md)
 - [TargetingValueDayPartTargeting](docs/TargetingValueDayPartTargeting.md)
 - [TargetingValueDayPartTargetingDayPart](docs/TargetingValueDayPartTargetingDayPart.md)
 - [TargetingValueDemogAgeCriteria](docs/TargetingValueDemogAgeCriteria.md)
 - [TargetingValueDemogGenderCriteria](docs/TargetingValueDemogGenderCriteria.md)
 - [TargetingValueRequestPlatformTargeting](docs/TargetingValueRequestPlatformTargeting.md)
 - [TargetingValueSize](docs/TargetingValueSize.md)
 - [UpdatePrivateAuctionProposalRequest](docs/UpdatePrivateAuctionProposalRequest.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/adexchange.buyer**: Manage your Ad Exchange buyer account configuration

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/adexchange.buyer**: Manage your Ad Exchange buyer account configuration


## Author




